--- a/portfolio.html
+++ b/portfolio.html
@@ -15,41 +15,91 @@
 </head>
 <body>
     <!--Шапка сайта-->
-    <header class="spacing">
-        <div class="container main-nav">
-            <nav class="main-nav">
-                <a href="./index.html" class="main-nav__logo animate__pulse">Web<span
-                        class="main-nav__logo_accent animate__pulse">Studio</span></a>
-                <ul class="site-nav site-nav__header list main-nav">
-                    <li class="site-nav__item">
-                        <a class="site-nav__link" href="./index.html">Студия</a>
-                    </li>
-                    <li class="site-nav__item">
-                        <a class="site-nav__link current" href="./portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="site-nav__item">
-                        <a class="site-nav__link" href="">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="contact contact__header list main-nav">
-                <li class="contact__item">
-                    <a class="contact__link" href="mailto:info@devstudio.com">
-                        <svg class="contact__icon-mail">
-                            <use href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
+<header class="spacing header">
+    <div class="container main-nav">
+        <nav class="main-nav">
+            <a href="./index.html" class="main-nav__logo animate__pulse">Web<span
+                    class="main-nav__logo_accent animate__pulse">Studio</span></a>
+            <ul class="site-nav site-nav__header list main-nav">
+                <li class="site-nav__item">
+                    <a class="site-nav__link" href="./index.html">Студия</a>
+                </li>
+                <li class="site-nav__item">
+                    <a class="site-nav__link current" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="site-nav__item">
+                    <a class="site-nav__link" href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <button type="button" data-menu-button class="header__mobile-menu-btn">
+            <svg class="header__mobile-menu-icon">
+                <use href="./images/sprite.svg#burger-icon"></use>
+            </svg>
+        </button>
+        <ul class="contact contact__header list">
+            <li class="contact__item">
+                <a class="contact__link contact_tel" href="mailto:info@devstudio.com">
+                    <svg class="contact__icon-mail">
+                        <use href="./images/sprite.svg#icon-mail"></use>
+                    </svg>
+                    info@devstudio.com</a>
+            </li>
+            <li class="contact__item">
+                <a class="contact__link" href="tel:+380961111111">
+                    <svg class="contact__icon-smartphone">
+                        <use href="./images/sprite.svg#icon-smartphone"></use>
+                    </svg>
+                    +380961111111</a>
+            </li>
+        </ul>
+    </div>
+
+    <div data-menu class="mobile-menu">
+        <div class="container mobile-menu__container">
+            <button type="button" data-menu-close class="mobile-menu__close-btn">
+                <svg class="modal__close-icon">
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+            <ul class="mobile-menu__nav list">
+                <li class="mobile-menu__item">
+                    <a href="./index.html" class="mobile-menu__link link">Студия</a>
+                </li>
+                <li class="mobile-menu__item">
+                    <a href="./portfolio.html" class="mobile-menu__link link current">Портфолио</a>
+                </li>
+                <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link link">Контакты</a>
+                </li>
+            </ul>
+            <ul class="mobile-contact  list">
+                <li class="mobile-contact__item">
+                    <a class="mobile-contact__link_tel link" href="tel:+380961111111">
+                        +380961111111</a>
+                </li>
+                <li class="mobile-contact__item">
+                    <a class="mobile-contact__link_mail link" href="mailto:info@devstudio.com">
                         info@devstudio.com</a>
                 </li>
-                <li class="contact__item">
-                    <a class="contact__link" href="tel:+380961111111">
-                        <svg class="contact__icon-smartphone">
-                            <use href="./images/sprite.svg#icon-smartphone"></use>
-                        </svg>
-                        +380961111111</a>
+            </ul>
+            <ul class="mobile-social list">
+                <li class="mobile-social__item">
+                    <a href="" class="mobile-social__link link">Instagram</a>
+                </li>
+                <li class="mobile-social__item">
+                    <a href="" class="mobile-social__link link">Twitter</a>
+                </li>
+                <li class="mobile-social__item">
+                    <a href="" class="mobile-social__link link">Facebook</a>
+                </li>
+                <li class="mobile-social__item">
+                    <a href="" class="mobile-social__link link">LinkedIn</a>
                 </li>
             </ul>
         </div>
-    </header>
+    </div>
+</header>
     <main>
     <section class="section">
         <div class="container">
@@ -80,8 +130,6 @@
                                 <img src="./images/portfolio/img-1-mob.jpg" alt="ноутбук с открытой страницей сайта Технокряк на которой три человека">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-1.jpg" alt="ноутбук с открытой страницей сайта Технокряк на которой три человека" -->
-                                <!-- width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -116,7 +164,6 @@
                                     alt="постер New Orlean vs Golden Star">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-2.jpg" alt="постер New Orlean vs Golden Star" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -150,7 +197,6 @@
                                 <img src="./images/portfolio/img-3-mob.jpg" alt="логотип ресторана Seafood">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -183,8 +229,7 @@
                             
                                 <img src="./images/portfolio/img-4-mob.jpg" alt="наушники">
                             </picture>
-
-                            <!-- <img src="./images/portfolio/img-4.jpg" alt="наушники" width="370" height="294"> -->
+                           
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -218,7 +263,6 @@
                                 <img src="./images/portfolio/img-5-mob.jpg" alt="две коробки">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-5.jpg" alt="две коробки" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -252,8 +296,6 @@
                                 <img src="./images/portfolio/img-6-mob.jpg" alt="компьютер с открытым сайтом Inspiration has no Borders">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-6.jpg" alt="компьютер с открытым сайтом Inspiration has no Borders" width="370" -->
-                                <!-- height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -287,7 +329,6 @@
                                 <img src="./images/portfolio/img-7-mob.jpg" alt="журнал">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-7.jpg" alt="журнал" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -321,7 +362,6 @@
                                 <img src="./images/portfolio/img-8-mob.jpg" alt="логотип проекта LAB">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-8.jpg" alt="логотип проекта LAB" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -355,7 +395,6 @@
                                 <img src="./images/portfolio/img-9-mob.jpg" alt="открытый ноутбук и руки">
                             </picture>
 
-                            <!-- <img src="./images/portfolio/img-9.jpg" alt="открытый ноутбук и руки" width="370" height="294"> -->
                             <div class="portfolio__overlay">
                                 <p class="portfolio__overlay_text">Технокряк это современная площадка распространения коронавируса. Компании
                                     используют эту платформу для цифрового
@@ -376,11 +415,9 @@
 <footer>
     <div class="footer-section footer-section__container container">
         <div class="footer-section__address">
-            <div class="footer-section__margin-footer">
-                <a href="./index.html" class="main-nav__logo">Web<span class="main-nav__logo_footer">Studio</span></a>
-            </div>
+            <a href="./index.html" class="main-nav__logo">Web<span class="main-nav__logo_footer">Studio</span></a>
             <address>
-                <p class="footer-section__address">г. Киев, пр-т Леси Украинки, 26</p>
+                <p class="footer-section__geo">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="footer-section__contacts">
                     <li class="footer-section__item list">
                         <a class="footer-section__contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -391,31 +428,31 @@
                 </ul>
             </address>
         </div>
-        <div class="join container container__join">
+        <div class="join container__join">
             <h2 class="join__text">присоединяйтесь</h2>
-            <ul class="join__list">
-                <li class="join__item list">
+            <ul class="join__list list">
+                <li class="join__item">
                     <a class="join__link" href="">
                         <svg class="join__link_icon">
                             <use href="./images/sprite.svg#icon-instagram-1"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="join__item list">
+                <li class="join__item">
                     <a class="join__link" href="">
                         <svg class="join__link_icon">
                             <use href="./images/sprite.svg#icon-twitter-2"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="join__item list">
+                <li class="join__item">
                     <a class="join__link" href="">
                         <svg class="join__link_icon">
                             <use href="./images/sprite.svg#icon-facebook-3"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="join__item list">
+                <li class="join__item">
                     <a class="join__link" href="">
                         <svg class="join__link_icon">
                             <use href="./images/sprite.svg#icon-linkedin-4"></use>
@@ -429,7 +466,7 @@
             <span class="subscribe__wrapper">
                 <input type="email" class="subscribe__input" placeholder="E-mail" name="subscribe-email"
                     id="subscribe-email">
-                <button type="submit" class="button button_subscribe">Подписаться
+                <button type="submit" class="button_subscribe">Подписаться
                     <svg class="subscribe_svg">
                         <use href="./images/sprite.svg#icon-icon-send"></use>
                     </svg>
@@ -440,5 +477,6 @@
     </div>
 
 </footer>
+<script src="./js/menu.js"></script>
 </body>
 </html>
